@@ -1,0 +1,13 @@
+start on runlevel [2345]
+stop on runlevel [016]
+
+respawn
+pre-start script
+/usr/lib/bird/prepare-environment
+/usr/sbin/bird -p
+end script
+
+script
+. /etc/bird/envvars
+exec /usr/sbin/blah
+end script
