@@ -1,0 +1,3 @@
+Bump debhelper from old 10 to 12.
++ Drop obsolete upstart file blah.blah.upstart.
+Fixed-Lintian-Tags: package-uses-old-debhelper-compat-version
