@@ -1,0 +1,1 @@
+rm_conffile /etc/init/blah.conf 1.0-1
