@@ -9,6 +9,8 @@ lintian-brush (0.22) UNRELEASED; urgency=medium
     10.
   * Don't complain about reformatting issues if no changes have been
     made.
+  * Support removing upstart conffiles as part of upgrade to debhelper
+    11.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 10 Aug 2019 16:49:28 +0000
 
